--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@rematch/core": "^1.1.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "query-string": "^6.4.2",
@@ -22,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
